# baysian_base_ab_testing_tool

./: .gitignore  Dockerfile  README.md  docker-compose.yml  exe_main.py  pyproject.toml
conf/sample/: 20240614_ab_test_sample.yml
data/sample/: sample_data.csv  sample_data_impression.csv
src/: ab_test_pipeline.py  arg_process.py  train.py
src/preprocess/: __init__.py  preprocess_pipeline.py  preprocess_pipline.py  preprocessed.py  split_data.py  validation_data.py
src/pyro_model/ctr/: model_ctr.py
src/simulation/ctr_model/: monte_carlro_ctr.py
src/training/: eval_model.py  train.py  train_record.py
test/src/preprocess/: test_validation_data.py
